--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.3.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "^13.5.6",
