--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@thirdweb-dev/react": "^4.3.1",
+    "@thirdweb-dev/sdk": "^4.0.26",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.18.0",
+    "ethers": "^5",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
