--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@thirdweb-dev/sdk": "^4.0.26",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "framer-motion": "^10.18.0",
     "ethers": "^5",
+    "framer-motion": "^10.18.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -26,6 +26,7 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "autoprefixer": "^10.4.16",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
